finish BentoBox + BlockLocker