@@ -9,10 +9,22 @@ import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import world.bentobox.bentobox.BentoBox;
+import world.bentobox.bentobox.database.objects.Island;
+import world.bentobox.bentobox.managers.IslandWorldManager;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 public class BentoBoxProtectionModule implements IProtectionModule {
+    private final BentoBox bentoBox;
+
+    public BentoBoxProtectionModule() {
+        this.bentoBox = BentoBox.getInstance();
+    }
+
     @Override
     public String getPluginName() {
         return "BentoBox";
@@ -30,7 +42,19 @@ public class BentoBoxProtectionModule implements IProtectionModule {
 
     @Override
     public List<? extends ProtectionRangeInfo> getProtectionRangeInfos(OfflinePlayer player) {
-        return List.of();
+        Collection<Island> islands = bentoBox.getIslands().getIslands();
+        if (islands.isEmpty()) {
+            return List.of();
+        }
+
+
+        for (Island island : islands) {
+            if (island.getMembers().containsKey(player.getUniqueId())) {
+                return Collections.singletonList(new BentoBoxIslandInfo(island));
+            }
+        }
+
+        return Collections.emptyList();
     }
 
     @Override
@@ -39,8 +63,9 @@ public class BentoBoxProtectionModule implements IProtectionModule {
     }
 
     @Override
-    public @Nullable ProtectionRangeInfo getProtectionRangeInfo(@Nullable Location location) {
-        return null;
+    public @Nullable ProtectionRangeInfo getProtectionRangeInfo(@NotNull Location location) {
+        Optional<Island> island = bentoBox.getIslands().getIslandAt(location);
+        return island.map(BentoBoxIslandInfo::new).orElse(null);
     }
 
     @Override
@@ -50,21 +75,21 @@ public class BentoBoxProtectionModule implements IProtectionModule {
 
     @Override
     public IFlagState<?> getGlobalFlag(@NotNull String flag, @NotNull String world) {
-        return null;
+        throw new UnsupportedOperationException();
     }
 
     @Override
     public IFlagState<?> getGlobalFlag(@NotNull CommonFlags flag, @NotNull String world) {
-        return null;
+        throw new UnsupportedOperationException();
     }
 
     @Override
     public void setGlobalFlag(@NotNull String world, @NotNull String flag, Object value) {
-
+        throw new UnsupportedOperationException();
     }
 
     @Override
     public void setGlobalFlag(@NotNull String world, @NotNull CommonFlags flag, Object value) {
-
+        throw new UnsupportedOperationException();
     }
 }
